SigmaCodebackup3rdSep/objects/Community_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Brewer_Registration_Product__c</fullName>
        <label>Brewer Registration Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collect_Platform_Registration_Fees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Collect Platform Registration Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Orders_Per_Page__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Orders Per Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products_Per_Page__c</fullName>
        <label>Products Per Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Owner__c</fullName>
        <label>Record Owner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Community_URL__c</fullName>
        <label>Retailer Community URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Profile_Id__c</fullName>
        <label>Retailer Profile Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Profile_Name__c</fullName>
        <label>Retailer Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tavistock_comm__c</fullName>
        <label>Tavistock community url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Community_URL__c</fullName>
        <label>Vendor Community URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Profile_Id__c</fullName>
        <label>Vendor Profile Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Profile_Name__c</fullName>
        <label>Vendor Profile Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Community Settings</label>
</CustomObject>